Update index.html - Add Form HTML

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
             <div class="col-3"></div>
             <div class="col-6 text-white">
                 <section>
-                    <div class="row">
+                    <form>
+                        <div class="row">
                         <div class="col-3"></div>
                         <div class="col-6 py-3">
                             <label for="Tb_NickName" class="form-text text-white">Nome:</label>
@@ -33,6 +34,7 @@
                         </div>
                         <div class="col-3"></div>
                     </div>
+                    </form>
                 </section>
                 <section>
                     <div id="MainDiv" class="invisible">
