Update index.html v2

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                             <input id="Tb_NickName" type="text" class="form-control">
                             <p id="AlertStart">Deve Ser Prenchido o nome para poder iniciar</p>
                             <div class="d-flex justify-content-center py-3">
-                                    <button class="btn btn-outline-success w-50 text-white" onclick="OnStart()">Iniciar</button>
+                                    <button type="button" class="btn btn-outline-success w-50 text-white" onclick="OnStart()">Iniciar</button>
                             </div>
                         </div>
                         <div class="col-3"></div>
