--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
                             <label for="Tb_NickName" class="form-text text-white">Nome:</label>
                             <input id="Tb_NickName" type="text" class="form-control">
                             <p id="AlertStart">Deve Ser Prenchido o nome para poder iniciar</p>
+                            <input type="checkbox" class="form-check-input" id="showResponses" />
+                            <label for="showResponses" class="form-check-label text-white">Mostrar Respostas</label>
                             <div class="d-flex justify-content-center py-3">
                                     <button type="button" class="btn btn-outline-success w-50 text-white" onclick="OnStart()">Iniciar</button>
                             </div>
